@@ -1,4 +1,4 @@
-/* $Id: acconfig.h,v 1.161 2003/08/25 01:51:19 dtucker Exp $ */
+/* $Id: acconfig.h,v 1.162 2003/08/26 01:58:16 dtucker Exp $ */
 
 /*
  * Copyright (c) 1999-2003 Damien Miller.  All rights reserved.
@@ -231,6 +231,9 @@
 
 /* Define if compiler implements __func__ */
 #undef HAVE___func__
+
+/* Define this is you want GSSAPI support in the version 2 protocol */
+#undef GSSAPI
 
 /* Define if you want Kerberos 5 support */
 #undef KRB5
